--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <link href="vendor/bootstrap/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
     <link href="vendor/bootstrap/css/bootstrap-datetimepicker.css" rel="stylesheet">
 
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/popper/popper.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap-datetimepicker.min.js"></script>
+
     <!-- Custom styles for this template -->
     <style>
       body {
@@ -91,11 +98,10 @@
       });
     </script>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="vendor/bootstrap-datetimepicker.min.js"></script>
+    <audio id="soundplayer" src="">
+    </audio>
+
+    </div>
 
   </body>
 
