got the timer kind of working

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="vendor/bootstrap/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
     <link href="vendor/bootstrap/css/bootstrap-datetimepicker.css" rel="stylesheet">
-
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="screen"
+     href="http://tarruda.github.com/bootstrap-datetimepicker/assets/css/bootstrap-datetimepicker.min.css">
+    <link href="vendor/bootstrap/css/index.css" rel="stylesheet">
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
@@ -32,7 +35,6 @@
           padding-top: 56px;
         }
       }
-
     </style>
 
   </head>
