--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
 
     <div class="well">
       <div id="datetimepicker3" class="input-append">
-        <input data-format="hh:mm:ss" type="text"></input>
+        <input data-format="hh:mm:ss" type="text" id="endtime"></input>
         <span class="add-on">
           <i data-time-icon="icon-time" data-date-icon="icon-calendar">
           </i>
         </span>
       </div>
+      <p id="timeerror"></p>
     </div>
     <script type="text/javascript">
       $(function() {
@@ -100,11 +101,13 @@
       });
     </script>
 
-    <audio id="soundplayer" src="">
+    <button type="button" name="playbutton" onclick="play();">Play</button>
+    <audio id="soundplayer" autoplay loop>
     </audio>
 
     </div>
 
   </body>
+  <script type="text/javascript" src="scripts.js"></script>
 
 </html>
