--- a/index.html
+++ b/index.html
@@ -83,31 +83,58 @@
       </div>
     </div>
 
-    <div class="well">
-      <div id="datetimepicker3" class="input-append">
-        <input data-format="hh:mm:ss" type="text" id="endtime"></input>
-        <span class="add-on">
-          <i data-time-icon="icon-time" data-date-icon="icon-calendar">
-          </i>
-        </span>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="well">
+            <div id="datetimepicker3" class="input-append">
+              <input data-format="hh:mm:ss" type="text" id="endtime"></input>
+              <span class="add-on">
+                <i data-time-icon="icon-time" data-date-icon="icon-calendar">
+                </i>
+              </span>
+            </div>
+            <p id="timeerror"></p>
+          </div>
+        </div>
       </div>
-      <p id="timeerror"></p>
-    </div>
-    <script type="text/javascript">
-      $(function() {
-        $('#datetimepicker3').datetimepicker({
-          pickDate: false
-        });
-      });
-    </script>
 
-    <button type="button" name="playbutton" onclick="play();">Play</button>
-    <audio id="soundplayer" autoplay loop>
-    </audio>
+      <div class="col-lg-8">
+        <div id="focus" class="btn-group">
+          <button class="btn col-sm-120" data-toggle="dropdown" data-hover="dropdown"><b class="caret"></b><span class="selected">Focus Tune</span></button>
+          <ul class="dropdown-menu">
+            <li><a tabindex="-1" href="#">Contact</a></li>
+          </ul>
+        </div>
+      </div>
 
+      <div class="col-lg-6">
+        <div id="relax" class="btn-group">
+          <button class="btn" data-toggle="dropdown" data-hover="dropdown"><b class="caret"></b><span class="selected">Relaxing Tune</span></button>
+          <ul class="dropdown-menu">
+            <li>Contact</li>
+            <li><a tabindex="-1" href="#">Contact</a></li>
+            <li><a tabindex="-1" href="#">Contact</a></li>
+            <li><a tabindex="-1" href="#">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <button type="button" name="playbutton" onclick="play();">Play</button>
+      <audio id="soundplayer" autoplay loop>
+      </audio>
+
+      </div>
     </div>
 
   </body>
   <script type="text/javascript" src="scripts.js"></script>
+  <script type="text/javascript">
+    $(function() {
+      $('#datetimepicker3').datetimepicker({
+        pickDate: false
+      });
+    });
+  </script>
 
 </html>
