--- a/index.html
+++ b/index.html
@@ -63,10 +63,8 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h1 class="mt-5">Study Timer</h1>
-          <p class="lead">Enter The Duration You Plan To Study</p>
+          <p class="lead">Enter The Time You Plan To Be Done Studying!</p>
           <ul class="list-unstyled">
-            <li>Bootstrap 4.0.0-beta</li>
-            <li>jQuery 3.2.1</li>
           </ul>
         </div>
       </div>
@@ -74,7 +72,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-12 text-center">
           <div class="well">
             <div id="datetimepicker3" class="input-append">
               <input data-format="hh:mm:ss" type="text" id="endtime"></input>
@@ -88,7 +86,7 @@
         </div>
       </div>
 
-      <div class="col-lg-8">
+      <div class="col-lg-12 text-center">
         <div id="focus" class="btn-group">
           <button class="btn col-sm-120" data-toggle="dropdown" data-hover="dropdown"><b class="caret"></b><span class="selected">Focus Tune</span></button>
           <ul class="dropdown-menu">
@@ -97,7 +95,7 @@
         </div>
       </div>
 
-      <div class="col-lg-6">
+      <div class="col-lg-12 text-center">
         <div id="relax" class="btn-group">
           <button class="btn" data-toggle="dropdown" data-hover="dropdown"><b class="caret"></b><span class="selected">Relaxing Tune</span></button>
           <ul class="dropdown-menu">
