--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       }
       
       body {
-        background-image: url("http://p1.pichost.me/i/16/1389752.jpg");
+        background-image: url("https://photos.smugmug.com/StarTrails/i-fJVzGwN/0/9ca92646/L/GreatBasinPerseids2015-L.jpg");
 } 
       
     </style>
