--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
       body {
         background-image: url("https://photos.smugmug.com/StarTrails/i-fJVzGwN/0/9ca92646/L/GreatBasinPerseids2015-L.jpg");
 } 
+      h2 {
+ color: white;
+ font-family: verdana;
+ font-size: 56px;
+}
       
     </style>
 
@@ -50,8 +55,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h1 class="mt-5">Study Timer</h1>
-          <p class="lead">Enter The Time You Plan To Be Done Studying!</p>
+          <h2 class="mt-5">Study Timer</h2>
           <ul class="list-unstyled">
           </ul>
         </div>
