--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
           <div id="focus" class="btn-group">
             <button class="btn col-sm-120" data-toggle="dropdown" data-hover="dropdown"><b class="caret"></b><span class="selected">Focus Tune</span></button>
             <ul class="dropdown-menu">
-              <li><a href="#"></a></li>
+              <li><a href="#">Relaxing short.mp3</a></li>
+              <li><a href="#">Spa - Relaxing.mp3</a></li>
             </ul>
           </div>
         </div>
@@ -100,7 +101,8 @@
           <div id="relax" class="btn-group">
             <button class="btn" data-toggle="dropdown" data-hover="dropdown"><b class="caret"></b><span class="selected">Relaxing Tune</span></button>
             <ul class="dropdown-menu">
-              <li><a href="#"></a></li>
+              <li><a href="#">Uptempo - Music.mp3</a></li>
+              <li><a href="#">Uptempo short.mp3</a></li>
             </ul>
           </div>
         </div>
